--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
       <h1>Qual é a sua sorte de hoje?</h1>
       <span>Abra o biscoito e descubra!</span>
 
-      <img src="./assets/close-cookie.svg" alt="Biscoite da sorte fechado">
-
+      <img id="closedCookie" src="./assets/closed-cookie.svg" alt="Biscoite da sorte fechado">
+      
     </div>
     <div class="content2 hide">
       <h1>Aqui está a sua sorte de hoje:</h1>
       <div class="msg">
-        <p>Se alguém está tão cansado que não possa te dar um sorriso, deixa-lhe o teu.</p>
+        <p>Frase aqui</p>
       </div>
-      <img src="./assets/open-cookie.svg" alt="Biscoite da sorte fechado">
-      <button>Abrir outro biscoito</button>
+      <img id="openedCookie" src="./assets/opened-cookie.svg" alt="Biscoite da sorte fechado">
+      <button id="btnReset">Abrir outro biscoito</button>
     </div>
   </main>
 </body>
